# C-Qt-Client-sdk

./: README.md  cpp-qt-client.tgz
.github/workflows/: update-c-Qt-sdk.yml
.openapi-generator/: FILES
client/: CMakeLists.txt  OAIA2CDateTime.cpp  OAIA2CDateTime.h  OAIAccountApi.cpp  OAIAccountApi.h  OAIAccountCartAdd.cpp  OAIAccountCartAdd.h  OAIAccountCartAdd_200_response.cpp  OAIAccountCartAdd_200_response.h  OAIAccountCartAdd_200_response_result.cpp  OAIAccountCartAdd_200_response_result.h  OAIAccountCartAdd_hybris_websites_inner.cpp  OAIAccountCartAdd_hybris_websites_inner.h  OAIAccountCartList_200_response.cpp  OAIAccountCartList_200_response.h  OAIAccountCartList_200_response_result.cpp  OAIAccountCartList_200_response_result.h  OAIAccountCartList_200_response_result_carts_inner.cpp  OAIAccountCartList_200_response_result_carts_inner.h  OAIAccountConfigUpdate_200_response.cpp  OAIAccountConfigUpdate_200_response.h  OAIAccountConfigUpdate_200_response_result.cpp  OAIAccountConfigUpdate_200_response_result.h  OAIAccountFailedWebhooks_200_response.cpp  OAIAccountFailedWebhooks_200_response.h  OAIAccountFailedWebhooks_200_response_result.cpp  OAIAccountFailedWebhooks_200_response_result.h  OAIAccountFailedWebhooks_200_response_result_webhook_inner.cpp  OAIAccountFailedWebhooks_200_response_result_webhook_inner.h  OAIAccountSupportedPlatforms_200_response.cpp  OAIAccountSupportedPlatforms_200_response.h  OAIAccountSupportedPlatforms_200_response_result.cpp  OAIAccountSupportedPlatforms_200_response_result.h  OAIAccountSupportedPlatforms_200_response_result_supported_platforms_inner.cpp  OAIAccountSupportedPlatforms_200_response_result_supported_platforms_inner.h  OAIAccountSupportedPlatforms_200_response_result_supported_platforms_inner_params.cpp  OAIAccountSupportedPlatforms_200_response_result_supported_platforms_inner_params.h  OAIAccountSupportedPlatforms_200_response_result_supported_platforms_inner_params_required_inner_inner.cpp  OAIAccountSupportedPlatforms_200_response_result_supported_platforms_inner_params_required_inner_inner.h  OAIAttributeAdd_200_response.cpp  (+933 more)
docs/: index.html
